# doc-notes-ai

./: .gitignore  README.md  app.py  chains.py  pyproject.toml  reflexion.py  requirements.txt  s -ExecutionPolicy RemoteSigned) ; (& cAdityaWebd_AI_Project.venvScriptsActivate.ps1)
static/: index.js  style.css
templates/: home.html
