[project]
name = "webd-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bson>=0.5.10",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "flask>=3.1.3",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "motor>=3.7.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]
